Add gallery list & placeholder images.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,58 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>John Burnett | Web Developer</title>
   </head>
   <body>
-    <h1>John Burnett</h1>
-
+    <header>
+      <a href="index.html">
+        <h1>John Burnett</h1>
+        <h2>Web Developer</h2>
+     </a>
+     <nav>
+       <ul>
+         <li><a href="index.html">Portfolio</a></li>
+         <li><a href="#">About</a></li>
+         <li><a href="#">Contact</a></li>
+       </ul>
+     </nav>
+    </header>
+    <section>
+      <ul>
+        <li>
+          <a href="images/placeholder.jpg">
+            <img src="images/placeholder.jpg" alt="placeholder">
+            <p>This is a caption.</p>
+          </a>
+        </li>
+        <li>
+          <a href="images/placeholder.jpg">
+            <img src="images/placeholder.jpg" alt="placeholder">
+            <p>This is a caption.</p>
+          </a>
+        </li>
+        <li>
+          <a href="images/placeholder.jpg">
+            <img src="images/placeholder.jpg" alt="placeholder">
+            <p>This is a caption.</p>
+          </a>
+        </li>
+        <li>
+          <a href="images/placeholder.jpg">
+            <img src="images/placeholder.jpg" alt="placeholder">
+            <p>This is a caption.</p>
+          </a>
+        </li>
+        <li>
+          <a href="images/placeholder.jpg">
+            <img src="images/placeholder.jpg" alt="placeholder">
+            <p>This is a caption.</p>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <p>&copy; 2018</p>
+    </footer>
   </body>
 </html>
