--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       </ul>
     </section>
     <footer>
+      <a href="#"><img src="images/twitter-wrap.png" alt="Twitter logo."></a>
+      <a href="#"><img src="images/facebook-wrap.png" alt="Facebook logo."></a>
       <p>&copy; 2018</p>
     </footer>
   </body>
