Add wrapper & margin styling for wrapper.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>John Burnett | Web Developer</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <style>
+      footer {
+        color: green;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -20,44 +25,46 @@
        </ul>
      </nav>
     </header>
-    <section>
-      <ul>
-        <li>
-          <a href="images/placeholder.jpg">
-            <img src="images/placeholder.jpg" alt="placeholder">
-            <p>This is a caption.</p>
-          </a>
-        </li>
-        <li>
-          <a href="images/placeholder.jpg">
-            <img src="images/placeholder.jpg" alt="placeholder">
-            <p>This is a caption.</p>
-          </a>
-        </li>
-        <li>
-          <a href="images/placeholder.jpg">
-            <img src="images/placeholder.jpg" alt="placeholder">
-            <p>This is a caption.</p>
-          </a>
-        </li>
-        <li>
-          <a href="images/placeholder.jpg">
-            <img src="images/placeholder.jpg" alt="placeholder">
-            <p>This is a caption.</p>
-          </a>
-        </li>
-        <li>
-          <a href="images/placeholder.jpg">
-            <img src="images/placeholder.jpg" alt="placeholder">
-            <p>This is a caption.</p>
-          </a>
-        </li>
-      </ul>
-    </section>
-    <footer>
-      <a href="#"><img src="images/twitter-wrap.png" alt="Twitter logo."></a>
-      <a href="#"><img src="images/facebook-wrap.png" alt="Facebook logo."></a>
-      <p>&copy; 2018</p>
-    </footer>
+    <div id="wrapper">
+      <section>
+        <ul>
+          <li>
+            <a href="images/placeholder.jpg">
+              <img src="images/placeholder.jpg" alt="placeholder">
+              <p>This is a caption.</p>
+            </a>
+          </li>
+          <li>
+            <a href="images/placeholder.jpg">
+              <img src="images/placeholder.jpg" alt="placeholder">
+              <p>This is a caption.</p>
+            </a>
+          </li>
+          <li>
+            <a href="images/placeholder.jpg">
+              <img src="images/placeholder.jpg" alt="placeholder">
+              <p>This is a caption.</p>
+            </a>
+          </li>
+          <li>
+            <a href="images/placeholder.jpg">
+              <img src="images/placeholder.jpg" alt="placeholder">
+              <p>This is a caption.</p>
+            </a>
+          </li>
+          <li>
+            <a href="images/placeholder.jpg">
+              <img src="images/placeholder.jpg" alt="placeholder">
+              <p>This is a caption.</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <a href="#"><img src="images/twitter-wrap.png" alt="Twitter logo."></a>
+        <a href="#"><img src="images/facebook-wrap.png" alt="Facebook logo."></a>
+        <p>&copy; 2018</p>
+      </footer>
+   </div>
   </body>
 </html>
