add color for headers and links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
+      <a href="index.html" id="logo">
         <h1>John Burnett</h1>
         <h2>Web Developer</h2>
      </a>
